# visiopitch-standalone

./: .dockerignore  .gitignore  Dockerfile  MASTER_PLAN.md  main.py  pyproject.toml  render.yaml  requirements.txt  run.sh  vercel.json  visiopitch.db
api/: index.py
backend/: main.py
backend/ai/: __init__.py  llm.py
backend/api/: auth.py  pitches.py  sandbox.py
backend/db/: __init__.py  database.py  models.py  supabase.py
backend/middleware/: rate_limit.py
backend/sandbox/: cloud.py  renderer.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/pitch/: BlockInspector.tsx  BlockRenderer.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/pages/: Auth.tsx  Builder.tsx  Dashboard.tsx  Landing.tsx  Onboarding.tsx  PitchViewer.tsx  Templates.tsx
migrations/: 001_initial_schema.sql  002_versions_shares_analytics.sql
