[project]
name = "visiopitch-standalone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.84.0",
    "e2b>=2.15.2",
    "e2b-code-interpreter>=2.4.1",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
    "python-dotenv>=1.1.0",
    "supabase>=2.28.0",
]
