[project]
name = "visiopitch-standalone"
version = "2.0.0"
description = "AI-powered pitch builder — generates unique HTML/CSS pitch decks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
    "python-dotenv>=1.1.0",
    "supabase>=2.28.0",
]
